add html  wb wb-server and start make less

--- a/feedback.html
+++ b/feedback.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>Обратная связь</title>
 </head>
 <body>
     <header>
@@ -15,8 +15,8 @@
         </nav>
     </header>
     <main class="main">
-        <h1 class="main__title"> Главная </h1>
-        <p class="main__content">        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo quaerat suscipit in, reprehenderit necessitatibus vel dignissimos illum ipsam harum earum veniam assumenda debitis cum iste cumque? Voluptatum, unde doloremque.
+        <h1 class="main__title"> Обратная связь </h1>
+        <p>        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo quaerat suscipit in, reprehenderit necessitatibus vel dignissimos illum ipsam harum earum veniam assumenda debitis cum iste cumque? Voluptatum, unde doloremque.
             Quidem architecto ad commodi harum velit asperiores iure ex, vel quae soluta ratione ea nostrum magni corporis laudantium ipsum error officia! Ea tempora dolor quidem dolore nisi, repellendus autem explicabo.
             Quam culpa dolor, ea dolorum omnis incidunt placeat natus obcaecati suscipit aperiam et, voluptas reprehenderit dicta, laboriosam laudantium facere fugiat. Eius cupiditate error qui quod possimus placeat debitis ratione iusto?
             Perferendis explicabo minus magnam porro, illo deserunt, itaque quas quasi reiciendis libero nihil voluptate dicta hic asperiores quaerat est, molestiae neque sed natus. Consequuntur obcaecati facere, explicabo doloribus tempore quaerat.
@@ -24,7 +24,6 @@
             Omnis voluptatibus, maiores voluptatum ad itaque voluptates dicta, doloribus consequatur voluptatem odit deleniti ullam similique quo ipsam sapiente! Harum nesciunt debitis dignissimos minima cumque similique quos corporis non ex. Voluptatem.
     </p>
     </main>
-
     <script src="./src/index.js"></script>
 </body>
 </html>
