sort dir, finished less and setup lint

--- a/feedback.html
+++ b/feedback.html
@@ -22,8 +22,21 @@
             Perferendis explicabo minus magnam porro, illo deserunt, itaque quas quasi reiciendis libero nihil voluptate dicta hic asperiores quaerat est, molestiae neque sed natus. Consequuntur obcaecati facere, explicabo doloribus tempore quaerat.
             Soluta sed ullam inventore reiciendis dolores hic fugiat necessitatibus minus dignissimos, natus distinctio odio itaque quas, officiis nisi molestias officia architecto. Nulla atque fuga quibusdam quo deleniti et delectus nobis.
             Omnis voluptatibus, maiores voluptatum ad itaque voluptates dicta, doloribus consequatur voluptatem odit deleniti ullam similique quo ipsam sapiente! Harum nesciunt debitis dignissimos minima cumque similique quos corporis non ex. Voluptatem.
-    </p>
+        </p>
     </main>
+    <footer class="feedback-footer">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at eum tempora nihil! Odio, omnis excepturi aut, voluptates molestiae ipsam aliquam consequuntur cumque deserunt quod quisquam temporibus placeat tempore ipsum?</p>
+        </div>
+        <ul>
+                <li>lorem</li>
+                <li>lorem</li>
+                <li>lorem</li>
+            </ul>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ut in nisi provident voluptate vitae ipsa odio architecto sapiente magni velit fuga officia eius porro laborum, eos fugiat hic dolor!</p>
+        </div>
+    </footer>
     <script src="./src/index.js"></script>
 </body>
 </html>
