--- a/list_of_entries.html
+++ b/list_of_entries.html
@@ -14,6 +14,8 @@
             <a class="navigation__item" href="recording_page.html">Страница записи</a>
         </nav>
     </header>
-
+<main>
+    <h1>Страница подключена!</h1>
+</main>
 </body>
 </html>
