--- a/index.html
+++ b/index.html
@@ -16,15 +16,37 @@
     </header>
     <main class="main">
         <h1 class="main__title"> Главная </h1>
-        <p class="main__content">        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo quaerat suscipit in, reprehenderit necessitatibus vel dignissimos illum ipsam harum earum veniam assumenda debitis cum iste cumque? Voluptatum, unde doloremque.
+        <p class="main__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo quaerat suscipit in, reprehenderit necessitatibus vel dignissimos illum ipsam harum earum veniam assumenda debitis cum iste cumque? Voluptatum, unde doloremque.
             Quidem architecto ad commodi harum velit asperiores iure ex, vel quae soluta ratione ea nostrum magni corporis laudantium ipsum error officia! Ea tempora dolor quidem dolore nisi, repellendus autem explicabo.
             Quam culpa dolor, ea dolorum omnis incidunt placeat natus obcaecati suscipit aperiam et, voluptas reprehenderit dicta, laboriosam laudantium facere fugiat. Eius cupiditate error qui quod possimus placeat debitis ratione iusto?
             Perferendis explicabo minus magnam porro, illo deserunt, itaque quas quasi reiciendis libero nihil voluptate dicta hic asperiores quaerat est, molestiae neque sed natus. Consequuntur obcaecati facere, explicabo doloribus tempore quaerat.
             Soluta sed ullam inventore reiciendis dolores hic fugiat necessitatibus minus dignissimos, natus distinctio odio itaque quas, officiis nisi molestias officia architecto. Nulla atque fuga quibusdam quo deleniti et delectus nobis.
             Omnis voluptatibus, maiores voluptatum ad itaque voluptates dicta, doloribus consequatur voluptatem odit deleniti ullam similique quo ipsam sapiente! Harum nesciunt debitis dignissimos minima cumque similique quos corporis non ex. Voluptatem.
-    </p>
+            Quidem architecto ad commodi harum velit asperiores iure ex, vel quae soluta ratione ea nostrum magni corporis laudantium ipsum error officia! Ea tempora dolor quidem dolore nisi, repellendus autem explicabo.
+            Quam culpa dolor, ea dolorum omnis incidunt placeat natus obcaecati suscipit aperiam et, voluptas reprehenderit dicta, laboriosam laudantium facere fugiat. Eius cupiditate error qui quod possimus placeat debitis ratione iusto?
+            Perferendis explicabo minus magnam porro, illo deserunt, itaque quas quasi reiciendis libero nihil voluptate dicta hic asperiores quaerat est, molestiae neque sed natus. Consequuntur obcaecati facere, explicabo doloribus tempore quaerat.
+            Soluta sed ullam inventore reiciendis dolores hic fugiat necessitatibus minus dignissimos, natus distinctio odio itaque quas, officiis nisi molestias officia architecto. Nulla atque fuga quibusdam quo deleniti et delectus nobis.
+            Omnis voluptatibus, maiores voluptatum ad itaque voluptates dicta, doloribus consequatur voluptatem odit deleniti ullam similique quo ipsam sapiente! Harum nesciunt debitis dignissimos minima cumque similique quos corporis non ex. Voluptatem.
+            Quidem architecto ad commodi harum velit asperiores iure ex, vel quae soluta ratione ea nostrum magni corporis laudantium ipsum error officia! Ea tempora dolor quidem dolore nisi, repellendus autem explicabo.
+            Quam culpa dolor, ea dolorum omnis incidunt placeat natus obcaecati suscipit aperiam et, voluptas reprehenderit dicta, laboriosam laudantium facere fugiat. Eius cupiditate error qui quod possimus placeat debitis ratione iusto?
+            Perferendis explicabo minus magnam porro, illo deserunt, itaque quas quasi reiciendis libero nihil voluptate dicta hic asperiores quaerat est, molestiae neque sed natus. Consequuntur obcaecati facere, explicabo doloribus tempore quaerat.
+            Soluta sed ullam inventore reiciendis dolores hic fugiat necessitatibus minus dignissimos, natus distinctio odio itaque quas, officiis nisi molestias officia architecto. Nulla atque fuga quibusdam quo deleniti et delectus nobis.
+            Omnis voluptatibus, maiores voluptatum ad itaque voluptates dicta, doloribus consequatur voluptatem odit deleniti ullam similique quo ipsam sapiente! Harum nesciunt debitis dignissimos minima cumque similique quos corporis non ex. Voluptatem.
+        </p>
     </main>
-
+    <footer class="index-footer">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at eum tempora nihil! Odio, omnis excepturi aut, voluptates molestiae ipsam aliquam consequuntur cumque deserunt quod quisquam temporibus placeat tempore ipsum?</p>
+        </div>
+        <ul>
+                <li>lorem</li>
+                <li>lorem</li>
+                <li>lorem</li>
+            </ul>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ut in nisi provident voluptate vitae ipsa odio architecto sapiente magni velit fuga officia eius porro laborum, eos fugiat hic dolor!</p>
+        </div>
+    </footer>
     <script src="./src/index.js"></script>
 </body>
 </html>
