--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <a class="navigation__item" href="recording_page.html">Страница записи</a>
         </nav>
     </header>
+    <div class="slider-wrap">
+            <div class="slider-arrow__left"> &lt;</div>
+            <div class="slider-arrow__right">></div>
+        <ul class="slider">
+            <li><img src="/src/img/cat-second.jpg" alt="Cat"></li>
+            <li><img src="/src/img/cat.jpg" alt="Cat"></li>
+            <li><img src="/src/img/cat-third.jpg" alt="Cat"></li>
+        </ul>
+    </div>        
     <main class="main">
         <h1 class="main__title"> Главная </h1>
         <p class="main__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo quaerat suscipit in, reprehenderit necessitatibus vel dignissimos illum ipsam harum earum veniam assumenda debitis cum iste cumque? Voluptatum, unde doloremque.
